--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-todo-list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Nikhithamadishetti.github.io/my-todo-list",
+  "homepage": "https://nikhithamadishetti.github.io/my-todo-list",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
